VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc16Up.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [16MB/455.1MB][  3%][=>                                                ][5.333MB/s]  [32MB/455.1MB][  7%][===>                                              ][8MB/s]  [56MB/455.1MB][ 12%][======>                                           ][11.2MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][12MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][13.71MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][15MB/s]  [152MB/455.1MB][ 33%][================>                                 ][16.89MB/s]  [176MB/455.1MB][ 38%][===================>                              ][17.6MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][18.18MB/s]  [224MB/455.1MB][ 49%][========================>                         ][18.67MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][19.08MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][20MB/s]  [312MB/455.1MB][ 68%][==================================>               ][20.8MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][21.5MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][22.59MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][23.56MB/s]  [455.1MB/455.1MB][100%][==================================================][25.28MB/s]  [455.1MB/455.1MB][100%][==================================================][23.95MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_41588/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_41588/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
